6 November 2018:
	- Bugfix min-client-subnet-ipv6

25 October 2018: Ralph
	- Add min-client-subnet-ipv6 and min-client-subnet-ipv4 options.

25 October 2018: Wouter
	- Fix #4191: NXDOMAIN vs SERVFAIL during dns64 PTR query.
	- Fix #4190: Please create a "ANY" deny option, adds the option
	  deny-any: yes in unbound.conf.  This responds with an empty message
	  to queries of type ANY.
	- Fix #4141: More randomness to rrset-roundrobin.
	- Fix #4132: Openness/closeness of RANGE intervals in rpl files.
	- Fix #4126: RTT_band too low on VSAT links with 600+ms latency,
	  adds the option unknown-server-time-limit to unbound.conf that
	  can be increased to avoid the problem.
	- remade makefile dependencies.
	- Fix #4152: Logs shows wrong time when using log-time-ascii: yes.

24 October 2018: Ralph
	- Add markdel function to ECS slabhash.
	- Limit ECS scope returned to client to the scope used for caching.
	- Make lint like previous #4154 fix.

22 October 2018: Wouter
	- Fix #4192: unbound-control-setup generates keys not readable by
	  group.
	- check that the dnstap socket file can be opened and exists, print
	  error if not.
	- Fix #4154: make ECS_MAX_TREESIZE configurable, with
	  the max-ecs-tree-size-ipv4 and max-ecs-tree-size-ipv6 options.

22 October 2018: Ralph
	- Change fast-server-num default to 3.

8 October 2018: Ralph
	- Add fast-server-permil and fast-server-num options.
	- Deprecate low-rtt and low-rtt-permil options.

8 October 2018: Wouter
	- Squelch log of failed to tcp initiate after TCP Fastopen failure.

5 October 2018: Wouter
	- Squelch EADDRNOTAVAIL errors when the interface goes away,
	  this omits 'can't assign requested address' errors unless
	  verbosity is set to a high value.
	- Set default for so-reuseport to no for FreeBSD.  It is enabled
	  by default for Linux and DragonFlyBSD.  The setting can 
	  be configured in unbound.conf to override the default.
	- iana port update.

2 October 2018: Wouter